--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,4 @@ steps:
 
 - task: PowerShell@2
   inputs:
-    filePath: 'C:\Users\mohan\Downloads\Version.ps1'
+    filePath: 'https://github.com/mohankumar73/Test1/blob/main/Version.ps1'
