--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,4 @@ steps:
 - task: PowerShell@2
   inputs:
     filePath: 'https://github.com/mohankumar73/Test1/blob/main/Version.ps1'
+    errorActionPreference: 'silentlyContinue'
