--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -16,7 +16,7 @@ steps:
   
 - task: PowerShell@2
   inputs:
-    filePath: 'C:\Users\mohan\Downloads\Version.ps1'
+    filePath: 'Version.ps1'
     errorActionPreference: 'continue'
 
 - script: |
